--- a/pages/account/account.css
+++ b/pages/account/account.css
@@ -42,14 +42,16 @@
   flex-wrap: wrap;
   gap: 4rem;
   margin: 0 13%;
+  margin-bottom: 5rem;
 }
 
 h3 {
   color: #82a8cb;
-  font-size: 1.4rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: bold;
   margin: 0 13%;
   margin-top: 3rem;
+  text-transform: uppercase;
 }
 
 h4 {
@@ -82,4 +84,30 @@ h4.red {
   padding-right: 3rem;
   border-bottom: 2px solid rgb(179, 179, 179);
   margin-bottom: 1.6rem;
+}
+
+thead th {
+  font-weight: bolder;
+  font-size: 1rem;
+  font-style: italic;
+  border-color: #d4e5f4 !important;
+}
+
+.bg-blue {
+  background-color: #d4e5f4;
+  font-size: 1rem;
+  padding: 0.5rem;
+}
+
+.btn {
+  margin-left: 2rem !important;
+  padding: 0.55rem 2.8rem;
+  border-radius: 14px;
+  font-size: 1.2rem;
+}
+
+.btnBox {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 2rem;
 }
