Revert "Fixed home page CSS"
This reverts commit c41505ae70d746cf34cd95a5ce31ded207da0bec.

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-size: 15px;
+    font-size: 30px;
     margin: 0;
     padding: 0;
 }
@@ -15,23 +15,24 @@ nav {
     display: flex;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    height: 70px;
     justify-content: space-between;
-    margin-left: 75px;
-    margin-right: 75px;
+    margin-left: 155px;
+    margin-right: 155px;
+    margin-top: 60px;
 }
 
 .logo,
 .logo:hover {
     align-items: center;
-    border-bottom: 5px solid rgba(255, 0, 0, 0.95);
+    border-bottom: 9px solid rgba(255, 0, 0, 0.95);
     color: rgba(255, 255, 255, 1);
     display: flex;
     font-family: "Playfair Display", serif;
-    font-size: 36px;
+    font-size: 72px;
     font-weight: 700;
-    height: 70px;
-    width: auto;
+    height: 65px;
+    padding-bottom: 35px;
+    width: 390px;
 }
 
 a.active {
@@ -57,8 +58,7 @@ a.blue:hover {
 }
 
 .separator {
-    margin-left: 8px;
-    margin-right: 8px;
+    margin: 0 4px;
 }
 
 .section-reservation {
@@ -71,21 +71,21 @@ a.blue:hover {
     flex-direction: column;
     font-family: 'Playfair Display', serif;
     font-weight: 700;
-    height: 420px;
+    height: 840px;
     justify-content: center;
 }
 
 .container-reservation {
     background-color: rgba(255, 255, 255, 1);
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
     font-family: 'Poppins', sans-serif;
-    padding: 32px;
+    padding: 65px;
     width: 90%;
 }
 
 .container-reservation h2 {
     color: rgba(86, 130, 195, 1);
-    font-size: 24px;
+    font-size: 48px;
     font-weight: 700;
 }
 
@@ -97,45 +97,42 @@ a.blue:hover {
 
 .container-field {
     align-items: left;
-    border-left: 1px solid rgba(0, 0, 0, 1);
+    border-left: 2px solid rgba(0, 0, 0, 1);
     cursor: pointer;
     display: inline-flex;
     justify-content: left;
-    padding: 10px;
+    padding: 20px;
     position: relative;
     width: 30%;
 }
 
 .button-reservation {
     background-color: rgba(86, 130, 195, 1);
-    border-radius: 6px;
-    border: none;
     color: rgba(255, 255, 255, 1);
+    padding: 1rem 2rem;
+    width: 15%;
+    border: none;
+    border-radius: 6px;
     font-size: 1.3rem;
-    padding-bottom: 16px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 16px;
-    width: 125px;
 }
 
 .input-hidden {
+    position: absolute;
     background-color: transparent;
     border: transparent;
-    bottom: 0;
+    width: 100%;
+    outline: none;
     caret-color: transparent;
     left: 0;
-    outline: none;
-    padding-left: 45%;
-    padding-top: 15%;
-    position: absolute;
     top: 0;
-    width: 100%;
+    bottom: 0;
+    padding-top: 15%;
+    padding-left: 45%;
 }
 
 .section-reservation p {
-    font-size: 24px;
-    margin-top: 90px;
+    font-size: 48px;
+    margin-top: 180px;
 }
 
 .section-marketing {
@@ -144,7 +141,7 @@ a.blue:hover {
 }
 
 .section-marketing h2 {
-    font-size: 24px;
+    font-size: 48px;
     font-weight: 700;
 }
 
@@ -154,9 +151,9 @@ a.blue:hover {
     border-radius: 50%;
     color: rgba(0, 0, 0, 1);
     display: flex;
-    height: 50px;
+    height: 100px;
     justify-content: center;
-    width: 50px;
+    width: 100px;
 }
 
 .flex {
