--- a/backend/hotel/src/main/resources/public/pages/account/account.css
+++ b/backend/hotel/src/main/resources/public/pages/account/account.css
@@ -33,6 +33,20 @@
   width: 15%;
 }
 
+.user-img-navbar {
+  width: 10%;
+  margin-right: 1rem;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  color: white;
+  font-weight: bolder;
+
+  transform: translateY(-15%);
+}
+
 .section-1 {
   margin: 0 13%;
 }
