--- a/backend/hotel/src/main/resources/public/main.css
+++ b/backend/hotel/src/main/resources/public/main.css
@@ -18,6 +18,11 @@ ul {
   list-style: none;
 }
 
+.user-img-navbar {
+  width: 10%;
+  margin-right: 1rem;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -37,6 +42,7 @@ ul {
 
 .flex-center {
   display: flex;
+  align-items: center;
 }
 
 .center {
