--- a/backend/hotel/src/main/resources/public/main.css
+++ b/backend/hotel/src/main/resources/public/main.css
@@ -7,6 +7,7 @@ html {
   font-size: 16px;
 }
 .logo {
+  font-family: 'Playfair Display', serif;
   font-size: 3rem;
   line-height: 3.5rem;
   color: white;
